--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -19,13 +19,5 @@ http {
 
     #gzip on;
 
-    server {
-        listen 80;
-        server_name _;
-        default_type text/plain;
-
-        location / {
-            return 200 "hello\n";
-        }
-    }
+    include /usr/local/nginx/conf.d/*.conf;
 }
