add backquote sample

--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -3,6 +3,13 @@ server {
     server_name _;
     default_type text/plain;
 
+    location /backquote {
+        mruby_set_code $result '
+            `date`
+        ';
+        return 200 $result;
+    }
+
     location / {
         return 200 "Hello Nginx World!!!\n";
     }
