add redis sample

--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -10,6 +10,14 @@ server {
         return 200 $result;
     }
 
+    location /redis/set {
+        mruby_content_handler /usr/local/nginx/conf.d/redis/set.rb;
+    }
+
+    location /redis/get {
+        mruby_content_handler /usr/local/nginx/conf.d/redis/get.rb;
+    }
+
     location / {
         return 200 "Hello Nginx World!!!\n";
     }
