--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -10,6 +10,18 @@ server {
         return 200 $result;
     }
 
+    location /background {
+        # *21 mrb_run failed: return 500 HTTP status code to client: error: INLINE CODE:2: Interrupted system call - sysread failed (Errno::EINTR)
+        # 起動は成功するけど結果を読み込もうとして失敗する？
+        mruby_set_code $result '
+           `bash /usr/local/nginx/conf.d/background.sh &`
+        ';
+        # 起動は成功していて、ここで該当のプロセスを確認できる
+        mruby_content_handler_code '
+            Nginx.rputs `ps aux`
+        ';
+    }
+
     location /redis/set {
         mruby_content_handler /usr/local/nginx/conf.d/redis/set.rb;
     }
