--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -11,7 +11,7 @@ http {
     default_type application/octet-stream;
 
     access_log /dev/stdout;
-    error_log /dev/stderr debug;
+    error_log /dev/stdout;
 
     sendfile on;
     #tcp_nopush;
