--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -30,6 +30,16 @@ server {
         mruby_content_handler /usr/local/nginx/conf.d/redis/get.rb;
     }
 
+    location /access/allow {
+        mruby_access_handler_code 'Nginx.return Nginx::OK';
+        mruby_content_handler_code 'Nginx.rputs "OK"';
+    }
+
+    location /access/deny {
+        mruby_access_handler_code 'Nginx.return Nginx::HTTP_UNAUTHORIZED';
+        mruby_content_handler_code 'Nginx.rputs "OK"';
+    }
+
     location / {
         return 200 "Hello Nginx World!!!\n";
     }
