--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -40,6 +40,26 @@ server {
         mruby_content_handler_code 'Nginx.rputs "OK"';
     }
 
+    # /rewrite/hogehoge/path/to/file のリクエストに対して
+    # パス中の一部を取り除いてサーバ上のファイルへアクセスさせるサンプル
+    location ~ ^/rewrite/ {
+        mruby_rewrite_handler_code '
+            matched = Nginx::Var.new.uri.match(/^\/rewrite\/(.+?)\/(.+)$/)
+            if matched
+              key = matched[1]
+              file = matched[2]
+              Nginx.log Nginx::LOG_ERR, "key:#{key} file:#{file}"
+              Nginx.redirect "/rewrite_file/#{file}";
+            else
+              Nginx.return Nginx::DECLINED;
+            end
+        ';
+    }
+    location /rewrite_file {
+        internal;
+        root /usr/local/nginx/conf.d;
+    }
+
     location / {
         return 200 "Hello Nginx World!!!\n";
     }
